[gd_scene load_steps=2 format=2]

[ext_resource path="res://services/ranking/ranking.gd" type="Script" id=1]

[node name="RankingService" type="Node"]
script = ExtResource( 1 )

[node name="GetRankingsRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="SaveRankingRequest" type="HTTPRequest" parent="."]
timeout = 10.0

[connection signal="request_completed" from="GetRankingsRequest" to="." method="_on_GetRankingsRequest_request_completed"]
[connection signal="request_completed" from="SaveRankingRequest" to="." method="_on_SaveRankingRequest_request_completed"]
